<resources>
    <string name="app_name">LoginWithAnimation</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Temukan teman virtual baru dalam bentuk hewan peliharaan yang siap mendengarkan dan berbicara dengan kamu</string>
    <string name="title_welcome_page">Selamat Datang di Pan</string>
    <string name="title_signup_page">Register ke Pan</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Masuk ke Pan</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="start">Mulai</string>
    <string name="number_phone">Nomor Telepon</string>
    <string name="dob">Tanggal Lahir</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="email_address">this@example.com</string>
    <string name="pass_hint">min 8 character</string>
    <string name="nama_hint">Your name</string>
    <string name="nomor">08......</string>
    <string name="tanggal_lahir">dd/mm/yyyy</string>
    <string name="pilih_gender">Jenis Kelamin</string>
    <string name="acc_question">Sudah punya akun?</string>
    <string name="acc_question2">Belum punya akun?</string>
    <string name="title_activity_main_pan">MainPanActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_pan_main">PanMainActivity</string>
    <string name="senang">Senang</string>
    <string name="sedih">Sedih</string>
    <string name="takut">Takut</string>
    <string name="love">Love</string>
    <string name="marah">Marah</string>
    <string name="catatan">Catatan</string>
    <string name="simpan">Simpan</string>
    <string name="bagaimana_perasaanmu">Bagaimana perasaanmu?</string>
    <string name="_24">24</string>
    <string name="_23">23</string>
    <string name="_22">22</string>
    <string name="hari_ini">Hari ini</string>
    <string name="tambahkan_ke_jurnal">Tambahkan ke Jurnal</string>
    <string name="journal">Journal</string>
    <string name="Profile">Profile</string>
    <string name="welcoming_name">Selamat Datang</string>
    <string name="name_user">Fani Ivananda!!</string>
    <string name="save_change">Simpan Perubahan</string>
    <string name="title_edit_page">Edit Profile</string>
    <string name="title_chat">PAN CHAT</string>


</resources>